<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/title_margin_dimen"
    android:paddingBottom="@dimen/title_margin_dimen"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar_image_view"
        android:layout_width="@dimen/title_avatar_dimen"
        android:layout_height="@dimen/title_avatar_dimen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/title_barrier"
        android:contentDescription="@string/content_description_user_avatar"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="@dimen/title_margin_dimen"
        />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
        app:layout_constraintEnd_toStartOf="@+id/menu_image_button"
        app:layout_constraintBottom_toTopOf="@+id/publish_text_view"
        android:layout_marginHorizontal="@dimen/title_margin_dimen"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Title"
        />

    <TextView
        android:id="@+id/publish_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
        app:layout_constraintEnd_toStartOf="@+id/menu_image_button"
        app:layout_constraintBottom_toBottomOf="@+id/title_barrier"
        android:layout_marginHorizontal="@dimen/title_margin_dimen"
        android:layout_marginBottom="@dimen/title_margin_dimen"
        tools:text="Description"
        />

    <ImageButton
        android:id="@+id/menu_image_button"
        style="@style/my_icon_style"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:contentDescription="@string/content_description_menu_button"
        android:layout_marginBottom="@dimen/title_margin_dimen"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/title_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar_image_view, title_text_view, publish_text_view"
        />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_barrier"
        tools:text="Description https://www.google.com/"
        android:autoLink="web"
        android:layout_marginTop="@dimen/title_margin_dimen"
        />

    <ImageButton
        android:id="@+id/like_image_button"
        style="@style/my_icon_style"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view"
        android:layout_marginTop="@dimen/title_margin_dimen"
        android:contentDescription="@string/content_description_like_image_button"
        />

    <TextView
        android:id="@+id/number_of_likes_text_view"
        style="@style/my_text_view_for_icon_style"
        app:layout_constraintStart_toEndOf="@+id/like_image_button"
        android:layout_marginStart="@dimen/icon_margin"
        tools:text="100"
        />

    <ImageButton
        android:id="@+id/share_image_button"
        style="@style/my_icon_style"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintStart_toEndOf="@+id/number_of_likes_text_view"
        app:layout_constraintTop_toTopOf="@+id/like_image_button"
        app:layout_constraintBottom_toBottomOf="@+id/like_image_button"
        android:layout_marginStart="@dimen/icon_margin"
        android:contentDescription="@string/content_description_share_image_button"
        />

    <TextView
        android:id="@+id/number_share"
        style="@style/my_text_view_for_icon_style"
        app:layout_constraintStart_toEndOf="@+id/share_image_button"
        android:layout_marginStart="@dimen/icon_margin"
        tools:text="100"
        />

    <ImageButton
        android:id="@+id/views_Image_button"
        style="@style/my_icon_style"
        app:layout_constraintTop_toTopOf="@+id/like_image_button"
        app:layout_constraintBottom_toBottomOf="@+id/like_image_button"
        app:layout_constraintEnd_toStartOf="@+id/number_views"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        android:layout_marginEnd="@dimen/icon_margin"
        android:contentDescription="@string/icon_number_of_views" />


    <TextView
        android:id="@+id/number_views"
        style="@style/my_text_view_for_icon_style"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/icon_margin"
        tools:text="100"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@+id/like_image_button"
        android:layout_marginTop="@dimen/title_margin_dimen"
        />


</androidx.constraintlayout.widget.ConstraintLayout>