<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/title_margin_dimen"
    tools:context=".activities.FeedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.FeedFragment">

        <ImageView
            android:id="@+id/avatar_image_view"
            android:layout_width="@dimen/title_avatar_dimen"
            android:layout_height="@dimen/title_avatar_dimen"
            android:layout_marginBottom="@dimen/title_margin_dimen"
            android:contentDescription="@string/content_description_user_avatar"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="@id/title_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/title_margin_dimen"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/publish_text_view"
            app:layout_constraintEnd_toStartOf="@+id/menu_image_button"
            app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Title" />

        <TextView
            android:id="@+id/publish_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/title_margin_dimen"
            android:layout_marginBottom="@dimen/title_margin_dimen"
            app:layout_constraintBottom_toBottomOf="@+id/title_barrier"
            app:layout_constraintEnd_toStartOf="@+id/menu_image_button"
            app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view"
            tools:text="Description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_image_button"
            style="@style/my_icon_style"
            android:layout_width="@dimen/icon_size_dimen"
            android:layout_marginBottom="@dimen/title_margin_dimen"
            android:contentDescription="@string/content_description_menu_button"
            app:icon="@drawable/ic_baseline_more_vert_24"
            app:iconGravity="textStart"
            app:iconTint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar_image_view, title_text_view, publish_text_view" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_margin_dimen"
            android:autoLink="web"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_barrier"
            tools:text="Description https://www.google.com/" />

        <ImageView
            android:id="@+id/video_image_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/title_margin_dimen"
            android:contentDescription="@string/cd_play_image_button"
            android:src="@android:color/holo_red_light"
            app:layout_constraintBottom_toTopOf="@+id/like_image_button"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_image_button"
            style="@style/my_icon_style"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:clickable="false"
            android:contentDescription="@string/cd_play_image_button"
            app:icon="@drawable/ic_play_circle_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/video_image_view"
            app:layout_constraintEnd_toEndOf="@+id/video_image_view"
            app:layout_constraintStart_toStartOf="@+id/video_image_view"
            app:layout_constraintTop_toTopOf="@+id/video_image_view" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/video_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="play_image_button, video_image_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like_image_button"
            style="@style/my_icon_style"
            android:layout_marginTop="@dimen/title_margin_dimen"
            android:checkable="true"
            android:contentDescription="@string/content_description_like_image_button"
            app:icon="@drawable/ic_like_24dp"
            app:iconTint="@color/like_check_box_tint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_image_view"
            tools:text="100" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_image_button"
            style="@style/my_icon_style"
            android:layout_marginStart="@dimen/icon_margin"
            android:contentDescription="@string/content_description_share_image_button"
            app:icon="@drawable/ic_baseline_share_24"
            app:iconTint="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/like_image_button"
            app:layout_constraintStart_toEndOf="@+id/like_image_button"
            app:layout_constraintTop_toTopOf="@+id/like_image_button"
            tools:text="100" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/views_Image_button"
            style="@style/my_icon_style"
            android:layout_marginEnd="@dimen/icon_margin"
            android:contentDescription="@string/icon_number_of_views"
            app:icon="@drawable/ic_baseline_remove_red_eye_24"
            app:iconTint="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/like_image_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/like_image_button"
            tools:text="100" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/title_margin_dimen"
            android:background="@android:color/holo_red_light"
            app:layout_constraintTop_toBottomOf="@+id/like_image_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>